# calibration

./: .gitignore  .pre-commit-config.yaml  README.md  calibrate.py  chat_template.py  eval.py  guard_calibrator.py  pyproject.toml  requirements.txt  run.sh  run_experiments.sh  tuning.py  utils.py
scripts/: eval.py  metric_summary.py  metrics.py  plot_summary.py  plots.py  tuning.py
src/core/: calibrator.py  types.py  utils.py
src/core/calibrators/: __init__.py  base.py  batch.py  calibration.py  context_free.py  temperature.py
src/core/classifiers/: __init__.py  chat_template.py  guard_model.py  loader.py
src/evaluation/: metrics.py  visualization.py
src/evaluation/visualization/: __init__.py  calibration_curve.py  confidence_histogram.py  reliability_diagram.py  utils.py
src/guard_calibrator/: calibrator.py
src/guard_calibrator/calibrators/: base.py  batch.py  context_free.py
src/guard_calibrator/models/: guard_model.py
src/guard_calibrator/utils/: calibration.py  chat_template.py  loader.py
src/metrics/: calibration_metrics.py
src/visualization/: plotting.py
tests/core/: test_types.py
tests/visualization/: test_calibration_curve.py
